# IB

./: Biseccion.cc
Rey/: a.out  rey-main.cc  rey.cc  rey.h
practicas/GarciaPerezVictor-IB-Practica02-LinuxCommands/linux-exercises/: ProgrammingJoke.txt  long-text-file.txt
practicas/GarciaPerezVictor-IB-Practica03-EditorVi/: Quijote.txt
practicas/GarciaPerezVictor-IB-Practica04-first-programs/primeros_programas/: areaperimetro.cc  calculadora.cc  cruz.cc  jubilacion.cc  millas.cc  multiplicación.cc  saludo.cc  saludoyedad.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/P70955_segundos/: segundos  segundos.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/P92351/: diviyresto.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/P99182_Promedio/: Promedio  Promedio.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/ejercicio1/: Makefile  desinflado  desinflado.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/ejercicio2/: boolean_operators  boolean_operators.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/ejercicio3/: arithmetic_operators  arithmetic_operators.cc
practicas/GarciaPerezVictor-IB-Practica05-Expressions/ejercicio5/: divisionyresto  divisionyresto.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P31111_Parentheses/: P31111_Parentheses.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P34279_Add_one_second/: Add_one_second  Add_one_second.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P39057/: P39057_Computing_Areas.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P59539_Harmonic_numbers_1/: P59539_Harmonic_numbers_1.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P59875/: P59875Top_to_bottom  P59875Top_to_bottom.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P90615_Maximum_3int/: Maximum_3int  Maximum_3int.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P97156_Numbers_in_an_interval/: Numbers_in_an_interval  Numbers_in_an_interval.cc
practicas/GarciaPerezVictor-IB-Practica06-alternativas-e-iteraciones/P98960_Uppercase_lowercase/: Makefile  Uppercase_lowercase.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/: Makefile
practicas/GarciaPerezVictor-IB-Practica07-Functions/bin-to-dec/: Makefile  binary-to-decimal.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/bisiesto/: Makefile  leap-year.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/dec-to-bin/: Makefile  decimal-to-binary.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/fibonacci/: Makefile  fibonacci.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/practica1/: Makefile  P1.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/practica2/: Makefile  P2.cc
practicas/GarciaPerezVictor-IB-Practica07-Functions/suma_digitos/: Makefile  suma_digitos  suma_digitos.cc
practicas/GarciaPerezVictor-IB-Practica08-functions/: README.md
practicas/GarciaPerezVictor-IB-Practica08-functions/Ej1_Function_example/: Makefile  function-example.cc
practicas/GarciaPerezVictor-IB-Practica08-functions/Ej2_Change_case/: Makefile  change_case.cc  change_case.h  main.cc
practicas/GarciaPerezVictor-IB-Practica08-functions/Ej3_Random_numbers/: Makefile  main.cc  random_numbers  random_numbers.cc  random_numbers.h
practicas/GarciaPerezVictor-IB-Practica08-functions/Ej4_Are_Equal/: Are_Equal.cc  Are_Equal.h  Makefile  main.cc
practicas/GarciaPerezVictor-IB-Practica08-functions/Ej5_Triangle_area/: Makefile  main.cc  triangle_area.cc  triangle_area.h
practicas/GarciaPerezVictor-IB-Practica08-functions/practica1/: Makefile  X50468_Max4num  X50468_Max4num.cc
practicas/GarciaPerezVictor-IB-Practica08-functions/practica3/: Makefile  P99541_Print_Line  P99541_Print_Line.cc
practicas/GarciaPerezVictor-IB-Practica09-strings-vectors/aproximate_root/: CMakeLists.txt  aproximate_root.Doxyfile
practicas/GarciaPerezVictor-IB-Practica09-strings-vectors/capitalize_vowels/: CMakeLists.txt  capitalize_vowels.Doxyfile
practicas/GarciaPerezVictor-IB-Practica09-strings-vectors/hypotenuse/: CMakeLists.txt  hypotenuse.Doxyfile
practicas/GarciaPerezVictor-IB-Practica09-strings-vectors/polynomial/: CMakeLists.txt  polynomial.Doxyfile
practicas/GarciaPerezVictor-IB-Practica09-strings-vectors/scalar_product/: CMakeLists.txt  scalar_product.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/: README.md
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Desafio_Final/: CMakeLists.txt  desafio_final.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Desafio_Final_Extra/: Makefile  desafio_final  desafio_final.cc  desafio_final.h  main.cc
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Generate_Vector/: CMakeLists.txt  Generate_vector.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Invert_String/: CMakeLists.txt  Invert_string.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Min_And_Max_of_Vector/: CMakeLists.txt  Min_And_Max_of_Vector.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Reduce_Sum/: CMakeLists.txt  Reduce_Sum.Doxyfile
practicas/GarciaPerezVictor-IB-Practica10-string-array-vector/Vector_Randomizer/: CMakeLists.txt  vector_randomizer.Doxyfile
practicas/GarciaPerezVictor-IB-Practica11-files/: README.md
practicas/GarciaPerezVictor-IB-Practica11-files/ABC/: CMakeLists.txt  abc.Doxyfile  file.txt
practicas/GarciaPerezVictor-IB-Practica11-files/Cripto/: CMakeLists.txt  cripto.Doxyfile
practicas/GarciaPerezVictor-IB-Practica11-files/DFA/: CMakeLists.txt  dfa.Doxyfile
practicas/GarciaPerezVictor-IB-Practica11-files/Vowels_and_Consonants/: CMakeLists.txt  file.txt  vowels-and-consonants.Doxyfile
practicas/ib-2024-2025-p12-intro-oop-VicGarP06/: README.md  debug  debug.cc  hello_world_debug
(+40 files in other folders)
